--- a/SimpleResult/SimpleResult.csproj
+++ b/SimpleResult/SimpleResult.csproj
@@ -13,6 +13,7 @@
         <RepositoryType>git</RepositoryType>
         <PackageTags>Result</PackageTags>
         <Copyright>"Copyright (c) DantesFonCake 2022."</Copyright>
+        <PackageVersion>1.1.0</PackageVersion>
     </PropertyGroup>
 
 </Project>
